--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Titulo pestaña</title>
+<title>Modelo 3D</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Cabecera página</h1>
+<h1>Relieve de Burney</h1>
 <p>
-    Texto previo
+    La reina de la noche
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -20,7 +20,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    The British Museum
 </p>
   </body>
 </html>
